--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
@@ -576,17 +576,6 @@
                       <text value="Associate port &amp;with published service (bypass resolution):"/>
                     </properties>
                   </component>
-                  <component id="60d25" class="javax.swing.JComboBox" binding="serviceNameComboBox">
-                    <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <minimum-size width="100" height="-1"/>
-                        <preferred-size width="200" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <model/>
-                    </properties>
-                  </component>
                   <component id="523fb" class="javax.swing.JComboBox" binding="contentTypeComboBox">
                     <constraints>
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -597,6 +586,14 @@
                       <editable value="true"/>
                       <model/>
                     </properties>
+                  </component>
+                  <component id="be85d" class="com.l7tech.console.panels.ServiceComboBox" binding="serviceNameComboBox">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
                   </component>
                 </children>
               </grid>
