--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/UserIdentificationRequestDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/UserIdentificationRequestDialog.form
@@ -78,19 +78,28 @@
                   <text value="Details of selected certificate:"/>
                 </properties>
               </component>
-              <grid id="119ea" binding="certDetails" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+              <scrollpane id="90892">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="20" height="20"/>
+                  </grid>
                 </constraints>
-                <properties>
-                  <background color="-1"/>
-                  <focusable value="false"/>
-                </properties>
-                <border type="etched">
-                  <title-color color="-1"/>
-                </border>
-                <children/>
-              </grid>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <grid id="119ea" binding="certDetails" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+                    <constraints/>
+                    <properties>
+                      <background color="-1"/>
+                      <focusable value="false"/>
+                    </properties>
+                    <border type="etched">
+                      <title-color color="-1"/>
+                    </border>
+                    <children/>
+                  </grid>
+                </children>
+              </scrollpane>
             </children>
           </grid>
         </children>
